# Automate-Recruitment-Process

./: .gitignore  pyproject.toml
automate_recruitment/: main.py
recruitment/: pyproject.toml
recruitment/frontend/automate-recruitment/: package-lock.json  package.json
recruitment/frontend/automate-recruitment/src/: App.tsx
recruitment/frontend/automate-recruitment/src/components/: agentCard.tsx
recruitment/src/: backend.py  crew.py  frontend.py  main.py
recruitment/src/config/: tasks.yaml
recruitment/src/recruitment/: backend.py  frontend.py  main.py
recruitment/src/recruitment/tools/: task_output.py
